<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY endpoint "https://trackbook.lightdestory.com/api">]>
<resources>
    <string name="app_name">TrackBook</string>
    <string name="slogan">Track your readings and meet new pen-friends!</string>

    <!-- transitions names-->
    <string name="transition_Logo">transition_Logo</string>
    <string name="transition_Card">transition_Card</string>
    <string name="transition_Email">transition_Email</string>
    <string name="transition_FormAlt">transition_FormAlt</string>
    <string name="transition_FormButton">transition_FormButton</string>
    <string name="transition_Password">transition_Password</string>
    <string name="transition_Subtitle">transition_Subtitle</string>
    <string name="transition_Title">transition_Title</string>
    <string name="transition_AppBar">transition_AppBar</string>

    <!-- preferences names-->
    <string name="pref_User">user</string>
    <string name="pref_Library">library</string>

    <!-- Generic texts -->
    <string name="form_Email">Email</string>
    <string name="form_Password">Password</string>
    <string name="dialog_OK">OK</string>
    <string name="dialog_No">No</string>
    <string name="dialog_Yes">Yes</string>
    <string name="credentials_Error">Invalid Credentials</string>
    <string name="placeholder_Text">placeholder</string>

    <!-- Login texts -->
    <string name="login_Subtitle">Already a member? Log-in to continue!</string>
    <string name="login_Title">Hello, newcomer!</string>
    <string name="login_Button">Log-in!</string>
    <string name="login_GoToRegister">New User? Register Now!</string>
    <string name="login_ForgotPass">Forgot password?</string>

    <!-- Register texts -->
    <string name="register_Subtitle">The following data is required!</string>
    <string name="register_Title">Join our community!</string>
    <string name="register_PenName">Pen Name</string>
    <string name="register_Button">Join us!</string>
    <string name="register_GoToLogin">Already a member? Log-in!</string>
    <string name="register_PasswordHint">Letters, number and special chars. Min 8 chars</string>
    <string name="register_PenNameHint">Letters and Number</string>

    <!-- ResetPassword texts -->
    <string name="resetpwd_Subtitle">Don\'t worry, it can be changed!</string>
    <string name="resetpwd_Title">Forgot password?</string>
    <string name="resetpwd_Button">Change Password!</string>
    <string name="resetpwd_GoToLogin">Do you remember? Log-in!</string>
    <string name="reset_NewPassword">New Password</string>

    <!-- Dashboard texts -->
    <string name="dashboard_Name">Dashboard</string>
    <string name="dashboard_welcome">Welcome back!\nDid you read something interesting?</string>
    <string name="label_MyBooks">My Books</string>
    <string name="label_SearchBook">Add Books</string>
    <string name="label_Cloud">Backup &amp; Restore</string>
    <string name="label_About">About</string>
    <string name="label_LogOut">Log Out</string>

    <!-- Add_Edit Shared Texts -->
    <string name="book_colorTitle">Selected Color</string>
    <string name="book_titleTitle">New book\'s title</string>
    <string name="book_titleHint">It can contain letters, numbers special chars [\'-_,.]</string>
    <string name="book_pageHint">Pages read until now</string>
    <string name="book_pageHintShake">You can also shake the phone to increase the number!</string>
    <string name="book_InvalidBookData">Invalid Book Data</string>

    <!-- Add texts -->
    <string name="label_AddBook">Add Tracking</string>
    <string name="add_ISBNTitle">New book\'s ISBN</string>
    <string name="add_ISBNHint">It must be a 13-digit code</string>
    <string name="add_SaveButton">Add</string>
    <string name="add_ScanButton">Scan</string>
    <string name="add_savedBookTitle">Book Added</string>
    <string name="add_savedBookDesc">The book has been inserted into your library</string>
    <string name="add_existBookTitle">Book already exists</string>
    <string name="add_existBookDesc">The book\'s isbn is already into your library</string>
    <string name="add_PermissionTitle">Permission needed</string>
    <string name="add_PermissionDesc">Camera access is needed to perform OCR or bar code scanning!\nDo you want to allow it?</string>
    <string name="add_scanISBNTitle">Scanning ISBN</string>
    <string name="add_scanTitleTitle">Scanning Title</string>
    <string name="add_scanNoResult">Scan did not produce any valid result</string>
    <string name="add_scanDBLookUp">Do you want to search for book\'s title on our database?</string>
    <string name="add_scannedDB">Found: $1</string>
    <string name="add_scannedTitle">Found: $1\nDo you want to use it?</string>

    <!-- Edit texts -->
    <string name="label_EditBook">Update Tracking</string>
    <string name="edit_SaveButton">Save</string>
    <string name="edit_overwriteBookTitle">Overwrite Tracking Data</string>
    <string name="edit_overwriteBookDesc">Do you want to apply the changes?</string>

    <!-- About Texts -->
    <string name="about_application">About Application</string>
    <string name="about_dev"> <b>Developed by:</b> <i>Alessio Tudisco (LightDestory)</i></string>
    <string name="about_ide"> <b>Developed on:</b> <i>Android Studio</i></string>
    <string name="about_languages"> <b>Developed with:</b> <i>Kotlin</i> and <i>SW Engineering\'s course knowledge</i></string>
    <string name="about_builtApp"> <b>Running with:</b> <i>Material Design</i>, <i>Volley library</i> and <i>GSON library</i></string>
    <string name="about_backend">About Server</string>
    <string name="about_backendEndpoint"> <b>Current Endpoint:</b>\n<i>&endpoint;</i></string>
    <string name="about_backendLanguages"> <b>Developed with:</b> Web Programming\'s course knowledge</string>
    <string name="about_builtBackEnd"> <b>Running with:</b> <i>NodeJS</i>, <i>TypeScript</i>, <i>Express Framework</i>, <i>Knex library</i> and <i>PostgreSQL DBMS</i></string>
    <string name="about_GitHubTitle">It\'s open-source! Visit repository~</string>
    <string name="about_GitHubLink">https://github.com/LightDestory/TrackBook</string>

    <!-- Cloud Texts -->
    <string name="cloud_notice">Backup and restore your tracking data with one click!\n<b>Read the warnings before perform any action!</b></string>
    <string name="cloud_restore_title">Restore your data from cloud</string>
    <string name="cloud_backup_title">Save your data to cloud</string>
    <string name="cloud_restore_desc">Your local tracking data will be overwritten by the cloud\'s one!</string>
    <string name="cloud_backup_desc">Your cloud tracking data will be overwritten by the local\'s one!</string>

    <!-- Bookshelf Texts -->
    <string name="bookshelf_DeleteBookTitle">Delete Confirm</string>
    <string name="bookshelf_DeleteBookDesc">Do you really want to delete the selected book?\n$1 ($2)</string>
    <string name="bookshelf_DeleteAllBooksDesc">Do you really want to delete all the books?</string>
    <string name="bookshelf_Empty">:(\nNo books!</string>
    <string name="bookshelf_EmptyDesc">There are no books to delete!</string>

    <!-- LogOut -->
    <string name="logOut_Title">Logging out</string>
    <string name="logOut_Desc">Are you sure about it?\nBe careful to back up your data before logging out, if you log out every data will be wiped.\nDo you want to continue?</string>

    <!-- Check data texts -->
    <string name="check_InvalidEmailDesc">The entered email does not satisfy RFC 5322!</string>
    <string name="check_InvalidEmailTitle">Invalid Email</string>
    <string name="check_InvalidPasswordDesc">"The password must be at least 8 character or more.\nPassword must be composed by letters, number or special characters\n(#?!@$%^&amp;*-_.,:;)"</string>
    <string name="check_InvalidPasswordTitle">Invalid Password</string>
    <string name="check_InvalidPenNameDesc">The pen name must be at max 16 character or less.Pen name must be composed by letters or number</string>
    <string name="check_InvalidPenNameTitle">Invalid Pen Name</string>
    <string name="check_InvalidTitleBookTitle">Invalid Book Title</string>
    <string name="check_InvalidPageBookTitle">Invalid Page Number</string>
    <string name="check_InvalidTitleBookDesc">Book\'s title must only contain letters, number and special characters such as \'-_.,</string>
    <string name="check_InvalidPageBookDesc">Book\'s page read must be a valid number!</string>
    <string name="check_InvalidISBNBookTitle">Invalid ISBN</string>
    <string name="check_InvalidISBNBookDesc">The entered ISBN code is not compatible with International Standard Book Number</string>

    <!-- API -->
    <string name="endpoint_error">Unable to get response from Endpoint</string>
    <string name="endpoint_generic">&endpoint;</string>
    <string name="endpoint_loading">Connecting to the cloud…</string>
    <!-- Register API -->
    <string name="endpoint_register">https://trackbook.lightdestory.com/api/account/register</string>
    <string name="endpoint_register_tag">tag_RegisterAPI</string>
    <string name="endpoint_register_title">Account Registration</string>

    <!-- Reset API -->
    <string name="endpoint_reset">https://trackbook.lightdestory.com/api/account/change</string>
    <string name="endpoint_reset_tag">tag_ResetAPI</string>
    <string name="endpoint_reset_title">Password Change</string>

    <!-- Login API -->
    <string name="endpoint_login">https://trackbook.lightdestory.com/api/account/login</string>
    <string name="endpoint_login_tag">tag_LoginAPI</string>
    <string name="endpoint_login_title">Account Log-in</string>

    <!-- BackUp & RestoreAPI -->
    <string name="endpoint_backup_restore">https://trackbook.lightdestory.com/api/user</string>
    <string name="endpoint_backup_tag">tag_BackUpAPI</string>
    <string name="endpoint_backup_title">Data BackUp</string>
    <string name="endpoint_restore_tag">tag_RestoreAPI</string>
    <string name="endpoint_restore_title">Data Restore</string>
    <string name="endpoint_restore_success">Data has been restored successfully!</string>

    <!-- Book API -->
    <string name="endpoint_book">https://trackbook.lightdestory.com/api/book/$1</string>
    <string name="endpoint_book_tag">tag_BookAPI</string>
    <string name="endpoint_book_title">Database Look up</string>

    <!-- Colors Name -->
    <string name="bright_pink">Bright Pink</string>
    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="chartreuse">Chartreuse</string>
    <string name="green">Green</string>
    <string name="spring_green">Spring Green</string>
    <string name="cyan">Cyan</string>
    <string name="azure">Azure</string>
    <string name="blue">Blue</string>
    <string name="violet">Violet</string>
    <string name="magenta">Magenta</string>
    <string-array name="book_colors_name">
        <item>@string/bright_pink</item>
        <item>@string/red</item>
        <item>@string/orange</item>
        <item>@string/yellow</item>
        <item>@string/chartreuse</item>
        <item>@string/green</item>
        <item>@string/spring_green</item>
        <item>@string/cyan</item>
        <item>@string/azure</item>
        <item>@string/blue</item>
        <item>@string/violet</item>
        <item>@string/magenta</item>
    </string-array>
</resources>