<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_gold_to_onprimary"
    tools:context=".ResetPasswordActivity">

  <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/resetBanner"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:transitionName="@string/transition_Logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/art_people_books_2" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetpwd_Title"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:textStyle="bold"
        android:transitionName="@string/transition_Title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetBanner"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/resetSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetpwd_Subtitle"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="18sp"
        android:textStyle="italic"
        android:transitionName="@string/transition_Subtitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetTitle"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/resetCard"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:transitionName="@string/transition_Card"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resetSubtitle"
        app:layout_constraintVertical_bias="0.02">

      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="fill_parent"
          android:orientation="vertical"
          android:padding="15dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetEmailInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_Email"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/icon_email">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/form_Email"
              android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetPenNameInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:counterOverflowTextColor="@color/red"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:helperText="@string/register_PenNameHint"
            app:helperTextEnabled="true"
            app:startIconDrawable="@drawable/icon_penname">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/register_PenName"
              android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/resetNewPasswordInput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:transitionName="@string/transition_Password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:helperText="@string/register_PasswordHint"
            app:helperTextEnabled="true"
            app:startIconDrawable="@drawable/icon_password">

          <com.google.android.material.textfield.TextInputEditText
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:hint="@string/reset_NewPassword"
              android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetAccess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/resetpwd_Button"
            android:transitionName="@string/transition_FormButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetPassRemember"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/resetpwd_GoToLogin"
            android:textColor="@color/secondary_text"
            android:transitionName="@string/transition_FormAlt" />
      </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>