<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradient_gold_to_onprimary"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/loginBanner"
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:transitionName="@string/transition_Logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.04"
            app:srcCompat="@drawable/art_people_books_2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_Title"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="24sp"
            android:textStyle="bold"
            android:transitionName="@string/transition_Title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginBanner"
            app:layout_constraintVertical_bias="0.15" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/loginSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_Subtitle"
            android:textAlignment="center"
            android:textColor="@color/secondary_text"
            android:textSize="18sp"
            android:textStyle="italic"
            android:transitionName="@string/transition_Subtitle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginTitle"
            app:layout_constraintVertical_bias="0.05" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/loginCard"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:transitionName="@string/transition_Card"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/loginSubtitle"
            app:layout_constraintVertical_bias="0.04">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="15dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginEmailInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="@string/transition_Email"
                    app:endIconMode="clear_text"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/icon_email">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_Email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginPasswordInput"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:transitionName="@string/transition_Password"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:helperText="@string/register_PasswordHint"
                    app:helperTextEnabled="true"
                    app:startIconDrawable="@drawable/icon_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/form_Password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginForgotPass"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_ForgotPass"
                    android:textColor="@color/secondary_text" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginAccess"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_Button"
                    android:transitionName="@string/transition_FormButton" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/loginNewUser"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/login_GoToRegister"
                    android:textColor="@color/secondary_text"
                    android:transitionName="@string/transition_FormAlt" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>